--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <!-- Шапка -->
 <header class="header">
     <div class="container">
-        <a href="/" <span class="header__logo-web link">Web</span><span class="header__logo-studio">Studio</span></a>
+        <a href="/" ><span class="header__logo-web">Web</span><span class="header__logo-studio">Studio</span></a>
         <nav class="header__nav">
             <ul class="header__list list">
                 <li class="header__item"><a class="header__link link list-active-link"
